<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:padding="10dp"
              android:weightSum="1">

    <TextView
        android:id="@+id/addExpense"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="5dp"
        android:text="@string/addDateAndExpenseString"
        android:textSize="20sp"
        android:textStyle="bold"/>

    <EditText
        android:id="@+id/editExpenseDescription"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/insertExpenseDescriptionString"
        android:inputType="textPersonName"/>

    <EditText
        android:id="@+id/editTextAmount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="5dp"
        android:ems="10"
        android:hint="@string/enterAmountString"
        android:inputType="numberDecimal"
        />

    <Button
        android:id="@+id/buttonConfirm"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/darker_gray"
        android:text="@string/confirmString"
        android:textColor="@android:color/white"
        android:textColorLink="@android:color/holo_blue_bright"/>

    <DatePicker
        android:id="@+id/datePicker"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight="0.85"/>

</LinearLayout>