<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_member"
    tools:context="com.example.team8.urlms.StaffMemberPage"
    tools:layout_editor_absoluteY="0dp"
    tools:layout_editor_absoluteX="0dp">

    <TextView
        android:id="@+id/weeklySalaryText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="75dp"
        android:text="@string/weeklySalaryString"
        android:textSize="18sp"
        app:layout_constraintTop_toBottomOf="@+id/memberName"
        tools:layout_constraintLeft_creator="1"
        tools:layout_constraintTop_creator="1"
        app:layout_constraintRight_toLeftOf="@+id/memberID"
        tools:layout_constraintRight_creator="1"
        app:layout_constraintLeft_toLeftOf="@+id/memberID"/>

    <EditText
        android:id="@+id/editId"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/insertNewId"
        android:visibility="visible"
        tools:layout_constraintTop_creator="1"
        tools:layout_constraintRight_creator="1"
        app:layout_constraintRight_toRightOf="@+id/editName"
        app:layout_constraintTop_toBottomOf="@+id/editName"
        tools:layout_constraintLeft_creator="1"
        app:layout_constraintLeft_toLeftOf="@+id/editName"/>

    <CheckBox
        android:id="@+id/researchAssistantBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ResearchAssistant"
        tools:layout_constraintBottom_creator="1"
        app:layout_constraintBottom_toTopOf="@+id/researchAssociateBox"
        tools:layout_constraintLeft_creator="1"
        app:layout_constraintLeft_toLeftOf="@+id/researchAssociateBox"/>

    <CheckBox
        android:id="@+id/researchAssociateBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ResearchAssociate"
        android:layout_marginStart="38dp"
        tools:layout_constraintTop_creator="1"
        tools:layout_constraintRight_creator="1"
        android:layout_marginEnd="39dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="106dp"
        app:layout_constraintTop_toBottomOf="@+id/editId"
        tools:layout_constraintLeft_creator="1"
        app:layout_constraintLeft_toLeftOf="@+id/editId"
        android:layout_marginLeft="38dp"
        android:layout_marginRight="39dp"
        app:layout_constraintHorizontal_bias="0.0"/>

    <TextView
        android:id="@+id/memberName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="21dp"
        android:layout_marginRight="21dp"
        android:text="@string/nameString"
        android:textSize="18sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/editName"
        app:layout_constraintRight_toLeftOf="@+id/editName"
        tools:layout_constraintBaseline_creator="1"
        tools:layout_constraintRight_creator="1"/>

    <Button
        android:id="@+id/backButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:text="@string/backButton"
        tools:layout_constraintTop_creator="1"
        android:layout_marginTop="16dp"
        tools:layout_constraintLeft_creator="1"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginLeft="16dp"/>

    <TextView
        android:id="@+id/memberID"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="21dp"
        android:text="@string/IDString"
        android:textSize="18sp"
        app:layout_constraintLeft_toLeftOf="@+id/memberName"
        app:layout_constraintTop_toBottomOf="@+id/memberName"
        tools:layout_constraintLeft_creator="1"
        tools:layout_constraintTop_creator="1"
        />

    <Button
        android:id="@+id/viewProgressButton"
        android:layout_width="143dp"
        android:layout_height="0dp"
        android:text="@string/viewProgressButton"
        android:layout_marginStart="16dp"
        tools:layout_constraintTop_creator="1"
        tools:layout_constraintBottom_creator="1"
        app:layout_constraintBottom_toBottomOf="@+id/addProgress"
        tools:layout_constraintLeft_creator="1"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="@+id/addProgress"
        android:layout_marginLeft="16dp"/>

    <TextView
        android:id="@+id/progressText"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="16dp"
        android:layout_marginEnd="15dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginStart="15dp"
        android:layout_marginTop="17dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/viewProgressButton"
        tools:layout_constraintBottom_creator="1"
        tools:layout_constraintLeft_creator="1"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintTop_creator="1"
        android:maxLines="10000"
        android:scrollbars="vertical"/>

    <EditText
        android:id="@+id/editName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/insertNewName"
        android:visibility="visible"
        android:layout_marginEnd="16dp"
        tools:layout_constraintTop_creator="1"
        tools:layout_constraintRight_creator="1"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="79dp"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginRight="16dp"/>

    <Button
        android:id="@+id/editButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/edit"
        android:layout_marginEnd="16dp"
        tools:layout_constraintTop_creator="1"
        tools:layout_constraintRight_creator="1"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginRight="16dp"/>

    <Button
        android:id="@+id/addProgress"
        android:layout_width="152dp"
        android:layout_height="82dp"
        android:text="@string/addProgress"
        android:layout_marginEnd="16dp"
        tools:layout_constraintTop_creator="1"
        tools:layout_constraintRight_creator="1"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="38dp"
        app:layout_constraintTop_toBottomOf="@+id/researchAssociateBox"
        android:layout_marginRight="16dp"/>

    <Button
        android:id="@+id/deleteButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/deleteButton"
        tools:layout_constraintTop_creator="1"
        android:layout_marginStart="32dp"
        android:layout_marginTop="16dp"
        tools:layout_constraintLeft_creator="1"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toRightOf="@+id/backButton"
        android:layout_marginLeft="32dp"/>

    <EditText
        android:id="@+id/editWeeklySalary"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="17dp"
        android:layout_marginRight="17dp"
        android:ems="10"
        android:hint="@string/insertNewWeeklySalaryString"
        android:inputType="numberDecimal"
        app:layout_constraintBaseline_toBaselineOf="@+id/weeklySalaryText"
        app:layout_constraintRight_toRightOf="parent"
        tools:layout_constraintBaseline_creator="1"
        tools:layout_constraintRight_creator="1"/>

</android.support.constraint.ConstraintLayout>
