<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.team8.urlms.FundingPage"
    tools:layout_editor_absoluteY="0dp"
    tools:layout_editor_absoluteX="0dp">

    <TextView
        android:id="@+id/amountText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/amountString"
        tools:layout_constraintRight_creator="1"
        app:layout_constraintRight_toRightOf="@+id/toDisplay"
        app:layout_constraintBaseline_toBaselineOf="@+id/editAmount"
        tools:layout_constraintBaseline_creator="1"
        tools:layout_constraintLeft_creator="1"
        app:layout_constraintLeft_toLeftOf="@+id/toDisplay"/>

    <TextView
        android:id="@+id/toDisplay"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/funding"
        android:layout_marginStart="38dp"
        android:layout_marginEnd="37dp"
        app:layout_constraintRight_toLeftOf="@+id/editAmount"
        tools:layout_constraintTop_creator="1"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintBottom_creator="1"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginTop="180dp"
        app:layout_constraintTop_toBottomOf="@+id/amountText"
        tools:layout_constraintLeft_creator="1"
        android:layout_marginBottom="179dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginLeft="38dp"
        android:layout_marginRight="37dp"/>

    <Button
        android:id="@+id/backButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/backButton"
        android:layout_marginStart="16dp"
        tools:layout_constraintTop_creator="1"
        android:layout_marginTop="16dp"
        tools:layout_constraintLeft_creator="1"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginLeft="16dp"/>

    <Button
        android:id="@+id/viewFundingAccountsButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/viewFunding"
        android:layout_marginEnd="16dp"
        tools:layout_constraintTop_creator="1"
        tools:layout_constraintRight_creator="1"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginRight="16dp"/>

    <Button
        android:id="@+id/addFundingAccountButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/addFundingAccountString"
        tools:layout_constraintTop_creator="1"
        tools:layout_constraintBottom_creator="1"
        app:layout_constraintBottom_toBottomOf="parent"
        tools:layout_constraintLeft_creator="1"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toRightOf="@+id/amountText"/>

    <EditText
        android:id="@+id/editType"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="17dp"
        android:ems="10"
        android:hint="@string/insertTypeString"
        android:inputType="textPersonName"
        tools:layout_constraintTop_creator="1"
        tools:layout_constraintRight_creator="1"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="117dp"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginRight="17dp"/>

    <EditText
        android:id="@+id/editAmount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/insertInitialAmount"
        android:inputType="numberDecimal"
        tools:layout_constraintTop_creator="1"
        tools:layout_constraintRight_creator="1"
        app:layout_constraintRight_toRightOf="@+id/editType"
        android:layout_marginTop="25dp"
        app:layout_constraintTop_toBottomOf="@+id/editType"
        tools:layout_constraintLeft_creator="1"
        app:layout_constraintLeft_toLeftOf="@+id/editType"/>

    <TextView
        android:id="@+id/typeText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/typeString"
        android:layout_marginStart="22dp"
        android:layout_marginEnd="21dp"
        tools:layout_constraintRight_creator="1"
        app:layout_constraintRight_toRightOf="@+id/amountText"
        app:layout_constraintBaseline_toBaselineOf="@+id/editType"
        tools:layout_constraintBaseline_creator="1"
        tools:layout_constraintLeft_creator="1"
        app:layout_constraintLeft_toLeftOf="@+id/backButton"
        android:layout_marginLeft="22dp"
        android:layout_marginRight="21dp"/>

    <Button
        android:id="@+id/payDayButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/payDayString"
        tools:layout_constraintTop_creator="1"
        tools:layout_constraintRight_creator="1"
        android:layout_marginEnd="1dp"
        app:layout_constraintRight_toRightOf="@+id/viewFundingAccountsButton"
        app:layout_constraintTop_toBottomOf="@+id/viewFundingAccountsButton"
        android:layout_marginRight="1dp"/>

</android.support.constraint.ConstraintLayout>
