<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.team8.urlms.StaffPage"
    tools:layout_editor_absoluteY="0dp"
    tools:layout_editor_absoluteX="0dp">

    <TextView
        android:id="@+id/toDisplay"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Some Stats you know"
        tools:layout_constraintBottom_creator="1"
        android:layout_marginStart="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        tools:layout_constraintLeft_creator="1"
        android:layout_marginBottom="174dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginLeft="16dp"/>

    <Button
        android:id="@+id/backButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/backButton"
        android:layout_marginStart="16dp"
        tools:layout_constraintTop_creator="1"
        android:layout_marginTop="16dp"
        tools:layout_constraintLeft_creator="1"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginLeft="16dp"/>

    <Button
        android:id="@+id/viewStaffList"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/view_stafflist"
        tools:layout_constraintTop_creator="1"
        tools:layout_constraintRight_creator="1"
        android:layout_marginEnd="16dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginRight="16dp"/>

    <EditText
        android:id="@+id/insertName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:ems="10"
        android:hint="@string/insertName"
        android:inputType="textPersonName"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintBottom_creator="1"
        app:layout_constraintBottom_toTopOf="@+id/researchAssistantBox"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginBottom="11dp"
        android:layout_marginRight="16dp"/>


    <Button
        android:id="@+id/addMemberButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="18dp"
        android:text="@string/addMember"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintBottom_creator="1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginBottom="224dp"
        android:layout_marginRight="18dp"/>

    <TextView
        android:id="@+id/nameText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/nameString"
        android:layout_marginEnd="29dp"
        app:layout_constraintRight_toLeftOf="@+id/insertName"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintBottom_creator="1"
        app:layout_constraintBottom_toBottomOf="@+id/insertName"
        android:layout_marginBottom="9dp"
        android:layout_marginRight="29dp"/>

    <CheckBox
        android:id="@+id/researchAssistantBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ResearchAssistant"
        tools:layout_constraintBottom_creator="1"
        app:layout_constraintBottom_toTopOf="@+id/researchAssociateBox"
        tools:layout_constraintLeft_creator="1"
        app:layout_constraintLeft_toLeftOf="@+id/researchAssociateBox"/>

    <CheckBox
        android:id="@+id/researchAssociateBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="137dp"
        android:layout_marginTop="135dp"
        android:text="@string/ResearchAssociate"
        app:layout_constraintBottom_toBottomOf="@+id/addMemberButton"
        app:layout_constraintLeft_toLeftOf="@+id/insertName"
        app:layout_constraintTop_toBottomOf="@+id/viewStaffList"
        tools:layout_constraintBottom_creator="1"
        tools:layout_constraintLeft_creator="1"
        tools:layout_constraintTop_creator="1"/>

    <EditText
        android:id="@+id/insertWeeklySalary"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="17dp"
        android:layout_marginRight="17dp"
        android:layout_marginTop="9dp"
        android:ems="10"
        android:hint="@string/insertWeeklySalary"
        android:inputType="numberDecimal"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/researchAssociateBox"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintTop_creator="1"/>

    <TextView
        android:id="@+id/weeklySalaryView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/weeklySalaryString"
        app:layout_constraintRight_toLeftOf="@+id/insertWeeklySalary"
        tools:layout_constraintRight_creator="1"
        android:layout_marginEnd="7dp"
        app:layout_constraintBaseline_toBaselineOf="@+id/insertWeeklySalary"
        tools:layout_constraintBaseline_creator="1"
        android:layout_marginRight="7dp"/>

</android.support.constraint.ConstraintLayout>
