<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.team8.urlms.InventoryItemPage"
    tools:layout_editor_absoluteY="0dp"
    tools:layout_editor_absoluteX="0dp">

    <TextView
        android:id="@+id/currentQuantityText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/quantityString"
        android:textSize="18sp"
        tools:layout_constraintTop_creator="1"
        android:layout_marginTop="17dp"
        app:layout_constraintTop_toBottomOf="@+id/editCost"
        tools:layout_constraintLeft_creator="1"
        app:layout_constraintLeft_toLeftOf="@+id/editCost"/>

    <TextView
        android:id="@+id/totalCostDisplay"
        android:layout_width="0dp"
        android:layout_height="252dp"
        android:text="@string/totalCostStatus"
        android:layout_marginStart="3dp"
        android:layout_marginEnd="3dp"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintBottom_creator="1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        tools:layout_constraintLeft_creator="1"
        android:layout_marginBottom="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginLeft="3dp"
        android:layout_marginRight="3dp"/>

    <TextView
        android:id="@+id/quantityText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/quantityString"
        android:textSize="18sp"
        android:layout_marginStart="36dp"
        app:layout_constraintBaseline_toBaselineOf="@+id/currentQuantityText"
        tools:layout_constraintBaseline_creator="1"
        tools:layout_constraintLeft_creator="1"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginLeft="36dp"/>

    <EditText
        android:id="@+id/editCost"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/insertCostItem"
        android:inputType="numberDecimal"
        android:visibility="visible"
        tools:layout_constraintTop_creator="1"
        tools:layout_constraintRight_creator="1"
        app:layout_constraintRight_toRightOf="@+id/editName"
        android:layout_marginTop="10dp"
        app:layout_constraintTop_toBottomOf="@+id/editName"
        tools:layout_constraintLeft_creator="1"
        app:layout_constraintLeft_toLeftOf="@+id/editName"/>

    <TextView
        android:id="@+id/itemName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/nameString"
        android:textSize="18sp"
        android:layout_marginStart="36dp"
        tools:layout_constraintTop_creator="1"
        tools:layout_constraintBottom_creator="1"
        app:layout_constraintBottom_toBottomOf="@+id/editCost"
        android:layout_marginTop="61dp"
        app:layout_constraintTop_toBottomOf="@+id/backButton"
        tools:layout_constraintLeft_creator="1"
        android:layout_marginBottom="61dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginLeft="36dp"/>

    <Button
        android:id="@+id/backButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:text="@string/backButton"
        tools:layout_constraintTop_creator="1"
        android:layout_marginTop="16dp"
        tools:layout_constraintLeft_creator="1"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginLeft="16dp"/>

    <TextView
        android:id="@+id/itemCost"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/costString"
        android:textSize="18sp"
        android:layout_marginStart="36dp"
        tools:layout_constraintTop_creator="1"
        android:layout_marginTop="28dp"
        app:layout_constraintTop_toBottomOf="@+id/itemName"
        tools:layout_constraintLeft_creator="1"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginLeft="36dp"/>




    <EditText
        android:id="@+id/editName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/insertNewName"
        android:visibility="visible"
        tools:layout_constraintTop_creator="1"
        tools:layout_constraintRight_creator="1"
        android:layout_marginEnd="16dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="112dp"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginRight="16dp"/>

    <Button
        android:id="@+id/editButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/edit"
        android:layout_marginEnd="16dp"
        tools:layout_constraintTop_creator="1"
        tools:layout_constraintRight_creator="1"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginRight="16dp"/>

    <Button
        android:id="@+id/deleteButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/deleteButton"
        android:layout_marginStart="32dp"
        tools:layout_constraintTop_creator="1"
        android:layout_marginTop="16dp"
        tools:layout_constraintLeft_creator="1"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toRightOf="@+id/backButton"
        android:layout_marginLeft="32dp"/>

    <Button
        android:id="@+id/addQuantityButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ADD_QUANTITY"
        tools:layout_constraintTop_creator="1"
        tools:layout_constraintRight_creator="1"
        android:layout_marginEnd="16dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/currentQuantityText"
        android:layout_marginRight="16dp"/>

</android.support.constraint.ConstraintLayout>
