<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:padding="10dp"
              android:weightSum="1">

    <TextView
        android:id="@+id/addQuantityText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="5dp"
        android:text="@string/ADD_QUANTITY"
        android:textSize="20sp"
        android:textStyle="bold"/>

    <EditText
        android:id="@+id/editTextAmount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="5dp"
        android:ems="10"
        android:hint="@string/enterQuantity"
        android:inputType="numberSigned"/>

    <Button
        android:id="@+id/buttonConfirm"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorAccent"
        android:text="@string/confirmString"
        android:textColor="@android:color/white"
        android:textColorLink="@android:color/holo_blue_bright"/>

</LinearLayout>